[package]
name = "imgui-gfx-hal"
version = "0.1.0"
authors = ["Benjamin <benjamin.fik.lee@gmail.com>"]
repository = "https://git.chronicembetterment.org/benjamin/imgui-gfx-hal"
homepage = "https://git.chronicembetterment.org/benjamin/imgui-gfx-hal"
description = "An imgui renderer backend for gfx-hal"
readme = "README.md"
license = "Unlicense/MIT"

[dependencies]
failure = "0.1"
memoffset = "0.2"
gfx-hal = "~0.1.0"
imgui = "~0.0.20"

[dev-dependencies]
gfx-backend-vulkan = "0.1.0"
env_logger = "0.6"
winit = "0.18"
